Add first recipe and link together with index.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Lasagna</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <h1>Lasagna</h1>
+        <a href="../index.html">Home</a>
     </body>
 </html>
