Add images directory and fill in lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,40 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="Lasagna served on a dish." height="500">
+
+        <h2>Description</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quae distinctio placeat maxime, perspiciatis, molestiae ullam quos vero cumque illo similique accusantium impedit sint
+            <br>quibusdam cum, officia possimus excepturi repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolorum nostrum corporis quaerat veniam corrupti autem amet ad
+            <br>eveniet! Voluptatibus omnis mollitia laudantium asperiores placeat doloremque aliquid vitae praesentium earum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+            <br>laudantium, aliquam quidem repellat rerum facere aliquid sapiente? Optio ex ab culpa. Accusantium nostrum impedit officiis necessitatibus ut est quos cupiditate.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio obcaecati sequi dicta quia omnis! Vero nulla unde maxime obcaecati quae nam, tempore dignissimos quod reiciendis
+            <br>commodi voluptatem excepturi totam quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, esse molestiae. Quidem doloribus fuga architecto ipsam quae ut ab
+            <br>nesciunt, magnam similique laudantium dolorem pariatur reiciendis voluptatum sunt minus hic! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta delectus omnis maxime,
+            <br>in earum quasi cumque explicabo accusamus totam optio incidunt blanditiis, illo quis provident? Fuga, consectetur. Perspiciatis, aliquid repellendus?</p>
+        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>Garlic</li>
+            <li>Tomato</li>
+            <li>Sugar</li>
+            <li>Spices</li>
+            <li>Noodles</li>
+            <li>Cheese</li>
+            <li>Egg</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce</li>
+            <li>Cook the noodles</li>
+            <li>Make the ricotta mixture</li>
+            <li>Layer the lasagna</li>
+            <li>Cover with foil and bake</li>
+            <li>Let the lasagna rest before serving</li>
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
