--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
         </ul>        
     </body>
 </html>
