--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/pizza.html">Pizza</a></li>
-            <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
-        </ul>        
+        <div class="content">
+            <h1>Odin Recipes</h1>
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/pizza.html">Pizza</a></li>
+                <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
+            </ul>
+        </div>        
     </body>
 </html>
